refactor: применить text blocks и SequencedCollections (Java 21)
- DiscordService.generateHelpMessage(): все строки с + конкатенацией заменены на text block
- DiscordService.generateHelpMessage(String userId): блоки sb.append(\n) заменены на text block
- StatisticsService.recordDailyProgress(): history.remove(0) → history.removeFirst()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>